@@ -1,3 +1,11 @@
+2008-01-08  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* sb-nytimes.el (shimbun-nytimes-next-url, shimbun-make-contents):
+	Remove.
+	(shimbun-multi-next-url): Do.
+
+	* sb-sankei.el (shimbun-sankei-retry-fetching): New variable.
+
 2007-12-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* sb-slashdot-jp.el (shimbun-rss-build-message-id): Relax a
